Fix overflows by setting box-sizing to border-box

--- a/findlatinnights/events/static/css/style.css
+++ b/findlatinnights/events/static/css/style.css
@@ -1,4 +1,9 @@
  /* style.css */
+ 
+ * {
+    box-sizing: border-box;
+ }
+ 
  body {
     background-color: #F6F6F6; /* light gray */
     font-family: 'Arial', sans-serif;
